# catdex-api

./: Cargo.toml  readme.md
migrations/2026-03-11-233541-0000_create_cats/: up.sql
src/: errors.rs  main.rs  models.rs  schema.rs
static/: cat.html  index.html
static/css/: cat.css  index.css
