[package]
name = "catdex"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
awmp = "0.8.1"
derive_more = "2.1.1"
diesel = { version = "2.3.6", features = ["mysql", "r2d2"] }
env_logger = "0.11.9"
handlebars = { version = "6.4.0", features = ["dir_source"] }
log = "0.4.29"
path-slash = "0.2.1"
r2d2 = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
validator = { version = "0.20.0", features = ["derive"] }
